PIP-289 Upgrade Java 17 and tidy up warnings